[tool.poetry]
name = "streamlit-kani"
version = "0.1.0"
description = "A streamlit-based UI server for Kani LLM agents"
authors = ["Shawn O'Neil <oneilsh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kani = {extras = ["openai"], version = "^0.7.0"}
streamlit = "^1.28.2"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
